tests/ui/closures/issue-80313-mutation-in-closure.rs
fn main() {
    let mut my_var = false;
    let callback = || {
        my_var = true;
    };
    callback(); //~ ERROR E0596
}
